--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,21 @@
         <activity
             android:name=".MenuDrawerActivity"
             android:label="@string/title_activity_menu_drawer"
-            android:theme="@style/Theme.AutenticationFireB.NoActionBar"></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Login" />
-        <activity android:name=".Registro">
+            android:theme="@style/Theme.AutenticationFireB.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"
+            />
+        <activity android:name=".Login" />
+        <activity android:name=".Registro">
+
+        </activity>
+
     </application>
+
 
 </manifest>
